--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-<h1 align="center">&lt;Enter Project Name Here&gt;</h1>
+<!-- <h1 align="center">&lt;Enter Project Name Here&gt;</h1>
 <br>
 
 <h2 align="center"><Project Description></h2>
@@ -19,49 +19,93 @@
   <p>&lt;Enter Meta Knowledge Graph Example Here&gt;</p>
 
 <h2 align="center">References</h2>
-<hr>
-<!-- list all references used to collect the data hosted in this app -->
-<ul>
-  <li>
-    <!-- if applicable, create a link to the resource like so -->
-    <div>
-      <div style="display: flex">
-        <b>Name: </b>
-        <!-- the reference name as a hyperlink -->
-        <a href=www.examples.com>example</a>
-      </div>
-      <!-- this div block is the description of a reference -->
-      <div style="display: flex">
-        <!-- prefeix to a description -->
-        <b>Description: </b>
-        <!-- the description as a paragraph element -->
-        <!-- enter your description inside of the <p></p> tags -->
-        <p>&lt;Enter Reference Description Here&gt;</p>
-      </div>
-    </div>
-<!--   
-comment  
-spacing
--->
-    <!-- If a reference cannot be linked, use this template -->
-    <div>
-      <!-- the prefix to a reference name -->
-      <div style="display: flex">
-        <!-- the prefix to a reference name. don't edit -->
-        <b>Name: </b>
-        <!-- the name of a reference. edit this -->
-        <p> Example Reference </p>
-      </div>
-    </div>
-    <div style="display: flex">
-      <b>Description: </b>
-      <p>&lt;Enter Reference Description Here&gt;</p>
-    </div>
-  </li>
-</ul>
+  <!-- add the name of a refernce here
+  Reference 1 -->
+# <Enter APP Name Here\>
+<ENTER APP DESCRIPTION HERE\>
 
-<style>
-  .reference-with-link{
+## Trapi Transaction
+------------------------------------------------------------------------
 
+Example of the Trapi Query, Response, and Meta Knowledge Graph Objects
+### Query
+<!-- create a query example for every supported query type in the meta knowledge graph for this app -->
+```json
+// query object
+// reference: https://github.com/NCATSTranslator/ReasonerAPI#message
+{
+  // message object
+  // reference: https://github.com/NCATSTranslator/ReasonerAPI/blob/master/docs/reference.md#message-
+  "message": {
+    // query graph object
+    // reference: https://github.com/NCATSTranslator/ReasonerAPI/blob/master/docs/reference.md#querygraph-
+    "query_graph": {
+      // nodes field
+      // reference: https://github.com/NCATSTranslator/ReasonerAPI/blob/master/docs/reference.md#fixed-fields-9
+      "nodes": {
+        // subject node subject node object
+        // reference: https://github.com/NCATSTranslator/ReasonerAPI/blob/master/docs/reference.md#qnode-
+        "n0": {
+          // biolink concept identifier
+          // reference: https://github.com/NCATSTranslator/ReasonerAPI/blob/master/docs/reference.md#fixed-fields-10
+          "ids"[
+            "<enter an example id here>"
+          ],
+          // biolink concept type
+          "categories": [
+            "<enter biolink category here>"
+          ]
+        },
+        // object node for <enter biolink type here>
+        "n1": {
+          // biolink concept identifiers
+          "ids": [
+            "<enter an example id here>"
+          ],
+          // biolink concept types
+          "categories": [
+            // < enter category types here>
+          ],
+          // indicates that this query node MAY have multiple KnowledgeGraph Nodes bound to it within each Result.
+          "is_set": false,
+          // a list of constraints applied to a query node 
+          "constraints": [],
+        }
+      },
+      "edges": {
+        "e0": {
+          // biolink predicate types
+          "predicates": [
+            // <enter predicate types>
+          ],
+          "subject": "n0",
+          "object": "n1",
+          "constraints": [
+            // enter edge constraints here
+          ]
+        }
+      }
+    }
   }
-</style>
+}
+```
+
+### Response
+```json
+{
+  
+}
+```
+
+### Meta Knowledge Graph
+```json
+{
+  
+}
+```
+
+## References
+#### Example Reference 1
+  Link: [example reference home page](www.example.com)
+  Description: <enter description for reference 1 here\>
+### Example Reference 2
